--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
 
     // lombok
-//    provided 'org.glassfish:javax.annotation:10.0-b28'
-    provided 'org.projectlombok:lombok:1.16.8'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'org.projectlombok:lombok:1.16.8'
 
-    //orm
+//    // di
+//    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+
+    // orm
     compile 'com.github.satyan:sugar:1.4'
 
     // tests
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile "org.robolectric:robolectric:3.0"
 }
