--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,14 @@ dependencies {
 
     // android
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+
+    // circular image view
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 
     // lombok
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'org.projectlombok:lombok:1.16.8'
-
-//    // di
-//    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 
     // orm
     compile 'com.github.satyan:sugar:1.4'
