--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.olebokolo.wordstack">
 
     <application
-        android:name="com.orm.SugarApp"
+        android:name="com.olebokolo.wordstack.core.app.WordStack"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
