--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -42,6 +43,7 @@
         <activity
             android:name=".presentation.activities.StackListActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".presentation.activities.CardsActivity"></activity>
     </application>
 
 </manifest>
