Reanimated stack list items, added basic layout with search to stack activity, created card item layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.activities.StackListActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".presentation.activities.CardsActivity"></activity>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".presentation.activities.StackActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
     </application>
 
 </manifest>
