--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,26 +23,53 @@ dependencies {
     // include jars
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    // android
+    //---------------------------------------------------------
+    // android libraries
+    //---------------------------------------------------------
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
+    //---------------------------------------------------------
 
-    // circular image view
+    //---------------------------------------------------------
+    // view libraries
+    //---------------------------------------------------------
+    // * expandable layout
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+    // * circular image view
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    // --------------------------------------------------------
 
-    // events
+    //---------------------------------------------------------
+    // event engine
+    //---------------------------------------------------------
+    // * green dao event bus
     compile 'org.greenrobot:eventbus:3.0.0'
+    //---------------------------------------------------------
 
-    // lombok
+    //---------------------------------------------------------
+    // boilerplate killers
+    //---------------------------------------------------------
+    // * glass fish annotations
     provided 'org.glassfish:javax.annotation:10.0-b28'
+    // * lombok
     compile 'org.projectlombok:lombok:1.16.8'
+    //---------------------------------------------------------
 
-    // orm
+    //---------------------------------------------------------
+    // persistence
+    //---------------------------------------------------------
+    // * sugar orm
     compile 'com.github.satyan:sugar:1.4'
+    //---------------------------------------------------------
 
-    // tests
-    testCompile 'junit:junit:4.12'
+    //---------------------------------------------------------
+    // testing
+    //---------------------------------------------------------
+    // * junit
     testCompile "org.mockito:mockito-core:1.10.19"
+    // * mockito
+    testCompile 'junit:junit:4.12'
+    //---------------------------------------------------------
 }
