--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.olebokolo.wordstack"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -26,19 +26,22 @@ dependencies {
     //---------------------------------------------------------
     // android libraries
     //---------------------------------------------------------
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     //---------------------------------------------------------
 
     //---------------------------------------------------------
     // view libraries
     //---------------------------------------------------------
+    // * recycler animations
+    compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     // * expandable layout
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     // * circular image view
-    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     // --------------------------------------------------------
 
     //---------------------------------------------------------
