--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:name=".presentation.activities.PracticeActivity"
+            android:name=".presentation.activities.ChoosePracticeStacksActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
     </application>
