--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,13 @@ dependencies {
     //---------------------------------------------------------
 
     //---------------------------------------------------------
+    // utils
+    //---------------------------------------------------------
+    // * apache commons
+    compile 'org.apache.commons:commons-lang3:3.1'
+    //---------------------------------------------------------
+
+    //---------------------------------------------------------
     // persistence
     //---------------------------------------------------------
     // * sugar orm
