--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,13 @@ dependencies {
     //---------------------------------------------------------
 
     //---------------------------------------------------------
+    // network
+    //---------------------------------------------------------
+    // * http requests
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    //---------------------------------------------------------
+
+    //---------------------------------------------------------
     // view libraries
     //---------------------------------------------------------
     // * recycler animations
