--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name=".core.app.WordStack"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/c_logo_light"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
