--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ gen/
 out/
 
 # Gradle files
-.gradle/
+#.gradle/
 build/
 
 # Local configuration file (sdk path, etc)
@@ -41,8 +41,8 @@ captures/
 # Keystore files
 *.jks
 
-.gitignore
+#.gitignore
 .idea/
-gradle/
-gradlew
-gradlew.bat
+#gradle/
+#gradlew
+#gradlew.bat
